<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo02"
            android:id="@+id/textViewSHK03CPO02Res"
            android:layout_marginLeft="15dp"
            android:textColor="#f0000000"
            android:layout_marginTop="10dp"
            android:textSize="13dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo01"
            android:id="@+id/textViewSHK03CPO01Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo03"
            android:id="@+id/textViewSHK03CPO03Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo04"
            android:id="@+id/textViewSHK03CPO04Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:textSize="13dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo05"
            android:id="@+id/textViewSHK03CPO05Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo06"
            android:id="@+id/textViewSHK03CPO06Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo07"
            android:id="@+id/textViewSHK03CPO07Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo08"
            android:id="@+id/textViewSHK03CPO08Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo09"
            android:id="@+id/textViewSHK03CPO09Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo10"
            android:id="@+id/textViewSHK03CPO10Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo11"
            android:id="@+id/textViewSHK03CPO11Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo12"
            android:id="@+id/textViewSHK03CPO12Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo13"
            android:id="@+id/textViewSHK03CPO13Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo14"
            android:id="@+id/textViewSHK03CPO14Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo21"
            android:id="@+id/textViewSHK03CPO21Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo22"
            android:id="@+id/textViewSHK03CPO22Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo23"
            android:id="@+id/textViewSHK03CPO23Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo24"
            android:id="@+id/textViewSHK03CPO24Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo25"
            android:id="@+id/textViewSHK03CPO25Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo26"
            android:id="@+id/textViewSHK03CPO26Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo27"
            android:id="@+id/textViewSHK03CPO27Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo15"
            android:id="@+id/textViewSHK03CPO15Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo16"
            android:id="@+id/textViewSHK03CPO16Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo17"
            android:id="@+id/textViewSHK03CPO17Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo18"
            android:id="@+id/textViewSHK03CPO18Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo19"
            android:id="@+id/textViewSHK03CPO19Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo19"
            android:id="@+id/textViewSHK03CPO20Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp" />
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_cpo28"
            android:id="@+id/textViewSHK03CPO28Res"
            android:layout_marginLeft="10dp"
            android:textColor="#f0000000"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:textSize="13dp"
            android:layout_weight="1" />

</LinearLayout>
