<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.gruposhark.liberacao.SHK01LoginActivity"
    android:orientation="vertical"
    android:background="#ffffff">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_login"
            android:id="@+id/textViewSHK01Login"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSHK01Login"
        android:layout_marginTop="50dp"
        android:hint="Usuario"
        android:text="@string/hint_usuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextSHK01Senha"
        android:layout_marginTop="10dp"
        android:hint="Senha"
        android:text="@string/hint_senha" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar"
        android:id="@+id/buttonSHK01Entrar"
        android:layout_marginTop="20dp"
        android:onClick="menu_onClick"
        android:background="#72a8c1"
        android:textColor="#ffffff" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarSHK01"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
