<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.gruposhark.liberacao.SHK02MenuActivity"
    android:orientation="vertical"
    android:background="#FFFFFFFF">



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_grupo_shark"
            android:id="@+id/textViewSHK02GrupoShark"
            android:layout_row="0"
            android:layout_column="4"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:textColor="#57595a"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewSHK02Grupo"
            android:layout_row="1"
            android:layout_column="2" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_menu"
        android:id="@+id/textViewSHK02Menu"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:background="#ffffff">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewSHK02Menu"
            android:background="#ffffff" />
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarSHK02"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sair"
        android:id="@+id/buttonSHK02Sair"
        android:layout_weight="1"
        android:onClick="voltarSHK01_onClick"
        android:textColor="#ffffff" />




</LinearLayout>
